Widened the main content div and associated elements, to prevent cramping and give a more readable text block.

--- a/css/default.css
+++ b/css/default.css
@@ -140,7 +140,7 @@ h1 a:hover { color:#fba919 ;}
 	border-bottom:1px solid #e5e5e5;
 	text-align:right;
 	font-size:0.8em;
-	width:490px;
+	width:750px;
 	color: #23af4c;
 
 }
@@ -241,7 +241,7 @@ color: #23af4c;
 color:#f4f4f4;
 margin:10px auto;
 padding:0;
-width:670px;
+width:800px;
 }
 
 #header {
@@ -277,7 +277,7 @@ line-height:1.5em;
 margin:0;
 padding:0;
 text-align:left;
-width:500px;
+width:750px;
 }
 
 #contentalt {
